--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando entorno Desarrollo
+configuracion.texto=Configurando entorno de Desarrollo
 configuracion.autor.nombre=Mariana
 configuracion.autor.email=out_mhernandezh@independencia.com.mx
